Fixed navbar dropdown not showing

--- a/wwwroot/css/site.css
+++ b/wwwroot/css/site.css
@@ -61,7 +61,6 @@ html {
 body {
     /* Margin bottom by footer height */
     margin-bottom: 60px;
-    z-index: 0;
 }
 .footer {
   position: absolute;
@@ -74,28 +73,30 @@ body {
 .table > tbody > tr > td {
     vertical-align: middle;
 }
-#container {
-    width: 100vw;
-    height: 15vh;
-    background: black;
-    display: grid;
-    place-items: center;
-    filter: saturate(130%) contrast(125%);
-}
 
 :root {
     --navy: #0c0c4a;
     --dark-navy: #060726;
     --pink: rgba(213, 84, 213, 1);
     --pink2: rgba(213, 84, 213, 0.7);
+    font-family: "Russo One";
 }
 
-*::before,::after {
-    content: "";
-    position: absolute;
+nav {
+    height: 14vh;
+    display: grid;
+    place-items: center;
+    filter: saturate(130%) contrast(125%);
+    margin-bottom: 2em;
+}
+
+#image, #top, #bottom, #ground, #image, #sky, #logo {
+    margin: 0;
+    padding: 0;
 }
 
 #image {
+    overflow: hidden;
     width: 100%;
     height: 100%;
     background: var(--navy);
@@ -104,8 +105,7 @@ body {
 }
 
 #top {
-    overflow: hidden;
-    height: 67%;
+    height: 75%;
     background: linear-gradient(transparent 50%, hotpink 160%);
     box-shadow: 0 15px 50px 1px white;
     position: relative;
@@ -116,7 +116,7 @@ body {
     top: 0;
     width: 100%;
     height: 100%;
-    background: repeating-linear-gradient( pink 2px, transparent 3px, transparent 30px ), repeating-linear-gradient(90deg, pink 2px, transparent 3px, transparent 40px) 10px 0;
+    background: repeating-linear-gradient( pink 2px, transparent 3px, transparent 30px ), repeating-linear-gradient( 90deg, pink 2px, transparent 3px, transparent 40px ) 10px 0;
     filter: drop-shadow(0 0 1px magenta) drop-shadow(0 0 3px magenta) drop-shadow(0 0 7px cyan);
     animation: move 10s linear infinite;
     opacity: 0.2;
@@ -128,7 +128,7 @@ body {
     width: 100%;
     height: 100%;
     transform: perspective(500px) rotateX(65deg);
-    bottom: -15%;
+    bottom: -25%;
     background: linear-gradient( 90deg, hotpink -60%, transparent 40%, transparent 60%, hotpink 140% );
     clip-path: polygon(0 100%, 0 55%, 100% 55%, 100% 100%);
 }
@@ -138,13 +138,20 @@ body {
     bottom: 0;
     width: 100%;
     height: 55%;
-    background: repeating-linear-gradient( white 2px, transparent 3px, transparent 30px ), repeating-linear-gradient(90deg, white 2px, transparent 3px, transparent 40px);
+    background: repeating-linear-gradient( white 2px, transparent 3px, transparent 30px ), repeating-linear-gradient( 90deg, white 2px, transparent 3px, transparent 40px );
     filter: drop-shadow(0 0 1px cyan) drop-shadow(0 0 3px cyan) drop-shadow(0 0 7px cyan);
     animation: move 10s linear infinite;
 }
 
-#text {
-    padding: 0 2em;
+#logo {
+    display: flex;
+    flex-direction: column;
+    place-items: center;
+    justify-content: center;
+    margin-left: 1em;
+}
+
+#nav {
     position: absolute;
     z-index: 10;
     width: 100%;
@@ -152,15 +159,24 @@ body {
     top: 0;
     display: flex;
     flex-direction: row;
+    align-items: center;
     justify-content: space-between;
 }
 
-#nav {
+#links {
+    z-index: 99999;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
-    align-content: center;
-    align-items:center;
+    align-items: center;
+    height: 100%;
+    margin-right: 1em;
+}
+
+.profile-img {
+    height: 50px;
+    width: 50px;
+    border-radius: 50%;
 }
 
 h1 {
@@ -182,7 +198,7 @@ h2 {
     color: white;
     font-family: "Yellowtail", cursive;
     font-weight: 100;
-    font-size: 1em;
+    font-size: 1.5em;
     transform: translateY(-10px) rotateZ(-5deg);
     text-shadow: 0 0 3px magenta, 0 0 7px magenta, 0 0 15px black, 0 0 15px black;
     animation: hover 1s ease-in-out infinite;
